# TRACE

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE-CODE  LICENSE-DATA  README.md  pyproject.toml  requirements.txt
configs/: generation.yaml
configs/dtt/: compatibility.yaml  taxonomy.yaml  template.yaml
configs/net/: compatibility.yaml  taxonomy.yaml  template.yaml
configs/session_interpretation/: compatibility.yaml  recommendations.yaml  taxonomy.yaml  template.yaml  trajectory_rules.yaml
configs/shared/: learner_profiles.yaml  mastery_states.yaml  prompt_types.yaml
configs/task_analysis/: compatibility.yaml  taxonomy.yaml  template.yaml  template_toleration.yaml
data/splits/: sanity.jsonl  test.jsonl  valid.jsonl
docs/: data-statement.md  dataset-card.md  datasheet.md  references.md  schema-v1.md  taxonomy-v1.md
docs/curation/: LEGEND.md  README.md
src/: compile_curation.py  generate.py  prepare_curation.py  split_data.py
src/generators/: __init__.py  aba_dtt.py  aba_net.py  aba_session_interp.py  aba_task_analysis.py  base.py
